fix(intervention): css fixes for intervention mobile view

--- a/frontend/src/components/InterventionForm/InterventionFormMobile.module.css
+++ b/frontend/src/components/InterventionForm/InterventionFormMobile.module.css
@@ -22,8 +22,7 @@
 
 .modalFooter {
     display: flex;
-    flex: row;
-    justify-content: space-around;
+    justify-content: center;
 }
 
 .modalFooter button:hover {
@@ -62,52 +61,22 @@
     align-items: center;
 }
 
-.notificationBell {
-    height: 1.2em;
-}
-
-.notificationIcon {
-    position: relative;
-    margin-right: 1.25em;
-}
-
-.notificationCount {
-    display: flex;
-    position: absolute;
-    top: -0.625em;
-    right: -0.625em;
-    background-color: red;
-    color: white;
-    border-radius: 1em;
-    height: 1.25em;
-    width: 1.25em;
-    font-size: 0.75em;
-    min-width: 1.25em;
-    align-items: center;
-    justify-content: center;
-}
-
-.profileBubble {
-    top: -0.625em;
-    right: -0.625em;
-    background-color: #007bff;
-    color: white;
-    border-radius: 2em;
-    width: 2em;
-    height: 2em;
-    font-size: 1.2em;
-    font-weight: 500;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
 .backButton {
     font-size: 1.1em;
-    margin: 1.2em 0 0 1.2em;
-    background-color: none;
+    margin: 1.2em 1em 0 1.2em;
+    background-color: #e2e2e2;
+    border-radius: 0.3em;
+    padding: 0.2em 0.5em;
     border: none;
-    color: #c93c2c;
+}
+
+.backButton i {
+    font-size: 0.9em;
+}
+
+.buttonContainer {
+    display: flex;
+    justify-content: end;
 }
 
 .titleCard,
@@ -118,7 +87,7 @@
     margin: 0.3em 1em;
     padding: 0.5em;
     background-color: white;
-    box-shadow: 0 0.3em 0.3em rgba(0, 0, 0, 0.247);
+    box-shadow: 0 0.2em 0.2em rgba(0, 0, 0, 0.1);
     border-radius: 1em;
 }
 
@@ -127,7 +96,7 @@
 }
 .eventId,
 .boldElement {
-    font-weight: 600;
+    font-weight: 500;
     margin-right: 1em;
 }
 
@@ -137,7 +106,7 @@
 .detailsCard p,
 .planCard h3,
 .planCard p {
-    margin-bottom: 0.3em;
+    margin-bottom: 0.25em;
 }
 
 .fillButton {
@@ -145,9 +114,17 @@
     width: auto;
     color: white;
     border: none;
-    border-radius: 0.5em;
-    padding: 0.5em;
-    font-size: 1.2em;
+    border-radius: 0.4em;
+    padding: 0.4em 0.6em;
+    font-size: 1em;
     margin: 1em 0 1em 0;
-    text-align: center;
+}
+
+.fillButton i {
+    margin-right: 0.5em;
+}
+
+.separation {
+    margin: 0.5em 0;
+    border-bottom: 0.063em solid #ccc;
 }
